* Implemented Notifications with Google Cloud Datastore
* Refactored services and repositories

--- a/MitigatingCircumstances/Pages/Tutor/ReviewExtension.cshtml
+++ b/MitigatingCircumstances/Pages/Tutor/ReviewExtension.cshtml
@@ -74,21 +74,20 @@
                         }
                     </p>
 
-                    <div>
-                        <p class="float-right">
-                            <button type="submit" data-new-status="1" class="btn btn-sm btn-success change-extension-state">
-                                Approve
-                            </button>
+                    <hr class="my-4" />
+                    <p class="float-right">
+                        <button type="submit" data-new-status="1" class="btn btn-sm btn-success change-extension-state">
+                            Approve
+                        </button>
 
-                            <button type="submit" data-new-status="2" class="btn btn-sm btn-danger change-extension-state">
-                                Reject
-                            </button>
+                        <button type="submit" data-new-status="2" class="btn btn-sm btn-danger change-extension-state">
+                            Reject
+                        </button>
 
-                            <button type="submit" data-new-status="3" class="btn btn-sm btn-secondary change-extension-state">
-                                Close
-                            </button>
-                        </p>
-                    </div>
+                        <button type="submit" data-new-status="3" class="btn btn-sm btn-secondary change-extension-state">
+                            Close
+                        </button>
+                    </p>
                 </div>
             </div>
         </div>
