--- a/MitigatingCircumstances/Views/Home/Index.cshtml
+++ b/MitigatingCircumstances/Views/Home/Index.cshtml
@@ -16,6 +16,6 @@
     <h1 class="display-4">SupportHub</h1>
     <p class="lead">Welcome, to our online student wellbeing portal. Use this portal to submit and track your mitigating circumstance forms.</p>
     <hr class="my-4">
-    <p>You're currently logged in as a <strong>@role</strong></p>
-    <a class="btn btn-primary btn-lg" asp-page="@aspPage" role="button">Get started</a>
+    <p class="lead">You're currently logged in as a <strong>@role</strong></p>
+    <p class="lead">Click <a class="lead" asp-page="@aspPage">here</a> to view extension request applications associated with your account.</p>
 </div>
