--- a/MitigatingCircumstances/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/MitigatingCircumstances/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -14,13 +14,13 @@
 
             <div class="form-group">
                 <label asp-for="Input.Firstname"></label>
-                <input asp-for="Input.Firstname" class="form-control" />
+                <input asp-for="Input.Firstname" class="form-control"/>
                 <span asp-validation-for="Input.Firstname" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Input.Lastname"></label>
-                <input asp-for="Input.Lastname" class="form-control" />
+                <input asp-for="Input.Lastname" class="form-control"/>
                 <span asp-validation-for="Input.Lastname" class="text-danger"></span>
             </div>
 
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-default">Save</button>
+            <button type="submit" class="btn btn-secondary">Save</button>
         </form>
     </div>
 </div>
