--- a/MitigatingCircumstances/wwwroot/css/site.css
+++ b/MitigatingCircumstances/wwwroot/css/site.css
@@ -15,6 +15,16 @@
     margin-right: 1rem;
 }
 
+.notification-menu {
+    margin: .125rem -10rem 0;
+}
+
+.scrollable-notification-menu {
+    height: auto;
+    max-height: 100px;
+    overflow-x: hidden;
+}
+
 .card-title {
     font-size: 1.5rem;
     font-weight: 500;
