* Removed unused model * Optimized UI

--- a/MitigatingCircumstances/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/MitigatingCircumstances/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -9,4 +9,8 @@
     <li class="@ManageNavPages.IndexNavClass(ViewContext)">
         <a asp-page="./Index">Profile</a>
     </li>
+
+    <li class="@ManageNavPages.PersonalDataNavClass(ViewContext)">
+        <a asp-page="./PersonalData">Personal data</a>
+    </li>
 </ul>
